# py-art

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ruff.yml
backup/delanuay_vis/: delanuay_vis.py
backup/triangulation/: triangulation.py
typings/plotly/: basedatatypes.pyi
typings/plotly/graph_objs/: _candlestick.pyi  _figure.pyi  _figurewidget.pyi  _ohlc.pyi
typings/plotly/io/: _orca.pyi
typings/plotly/offline/: offline.pyi
typings/scipy/_lib/: _array_api.pyi  _docscrape.pyi  _util.pyi
typings/scipy/fft/: _fftlog_backend.pyi
typings/scipy/integrate/: _bvp.pyi
typings/scipy/interpolate/: _bary_rational.pyi  _cubic.pyi  _fitpack2.pyi  _fitpack_impl.pyi  _fitpack_py.pyi  _interpolate.pyi  _ndbspline.pyi  _ndgriddata.pyi  _polyint.pyi  _rbfinterp.pyi  _rgi.pyi
typings/scipy/linalg/: _basic.pyi  _decomp.pyi  _decomp_cossin.pyi  _decomp_lu.pyi  _decomp_schur.pyi  _decomp_svd.pyi  _expm_frechet.pyi  _matfuncs.pyi  _solvers.pyi  _special_matrices.pyi  blas.pyi  interpolative.pyi
typings/scipy/ndimage/: _filters.pyi  _fourier.pyi  _interpolation.pyi  _measurements.pyi  _morphology.pyi  _support_alternative_backends.pyi
typings/scipy/optimize/: _constraints.pyi  _differentiable_functions.pyi  _minimize.pyi  _nonlin.pyi  _optimize.pyi  _qap.pyi  _shgo.pyi
typings/scipy/sparse/: _base.pyi  _bsr.pyi  _compressed.pyi  _construct.pyi  _coo.pyi  _csc.pyi  _csr.pyi  _data.pyi  _dia.pyi  _extract.pyi  _lil.pyi  _matrix.pyi  _sputils.pyi
typings/scipy/spatial/: _kdtree.pyi
typings/scipy/special/: _basic.pyi  _multiufuncs.pyi  (+2 more)
(+52 files in other folders)
